# gdnative

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  check.sh  example.sh  flake.nix
bindings-generator/: Cargo.toml
bindings-generator/src/: api.rs  class_docs.rs  classes.rs  dependency.rs  documentation.rs  godot_api_json.rs  godot_version.rs  lib.rs  methods.rs  special_methods.rs
bindings_generator/: Cargo.toml  api.json  namespaces.json
bindings_generator/src/: api.rs  class_docs.rs  classes.rs  dependency.rs  documentation.rs  godot_api_json.rs  json.rs  lib.rs  methods.rs  special_methods.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs
core/: Cargo.toml  build.rs
core/src/: byte_array.rs  class.rs  color.rs  color_array.rs  dictionary.rs  float32_array.rs  generated.rs  godot_type.rs  init.rs  int32_array.rs  internal.rs  lib.rs  macros.rs  node_path.rs  object.rs  pointers.rs  rid.rs  string.rs  string_array.rs  variant.rs  variant_array.rs  vector2.rs  vector2_array.rs  vector3.rs  vector3_array.rs
derive/: Cargo.toml
derive/src/: derive_macro.rs  lib.rs  method_macro.rs
editor/: Cargo.toml  build.rs
editor/src/: lib.rs
examples/fps/: Ammo_Pickup.tscn  Broken_Target.tscn  Bullet_Scene.tscn  Cargo.toml  Debug_Display.tscn  FPS_project_icon.png.import  Grenade.tscn  Health_Pickup.tscn  Main_Menu.tscn  Pause_Popup.tscn  Player.gdns  Player.tscn  README.md  Simple_Audio_Player.tscn  Sticky_Grenade.tscn  Target.tscn  Testing_Area.tscn  Turret.tscn  fps_library.gdnlib  project.godot
examples/fps/assets/: 32-32_white.png.import  AnimationPlayer.scn  Colors.material  Emission.material  Game_Level_Assets.dae.import  GodotBattleBot_Colors.png.import  GodotBattleBot_Emission.png.import  GodotBattleBot_Simple.dae.import  Grenade.scn  Grenades.dae  Grenades.dae.import  GunMaterial.material  GunMaterial_001.material  GunTextures.png.import  Gun_Emission.material  Gun_Emission_001.material  MuzzleFlash.material  MuzzleFlash_001.material  SIL Open Font License.txt  StickyGrenade.scn  lightblue_equirectangular.png.import
examples/fps/src/: extensions.rs  lib.rs  player.rs
examples/specs_integration/: Cargo.toml  Parent.gdns  project.godot  specs_integration.gdnlib
examples/specs_integration/src/: lib.rs  singleton.rs  sync.rs  your_state.rs
gdnative/: Cargo.toml  api.json  build.rs
gdnative-async/: Cargo.toml
gdnative-async/src/: executor.rs  future.rs  lib.rs  method.rs  rt.rs
gdnative-bindings/: Cargo.toml  api.json  build.rs
gdnative-bindings/docs/: AABB.xml  ARVRCamera.xml  ARVRController.xml  ARVRInterface.xml  ARVROrigin.xml  ARVRPositionalTracker.xml  ARVRServer.xml  AnimatedSprite.xml  AnimatedSprite3D.xml  Animation.xml  AnimationNode.xml  AnimationNodeAdd2.xml  AnimationNodeAdd3.xml  AnimationNodeAnimation.xml  AnimationNodeBlend2.xml  AnimationNodeBlend3.xml  AnimationNodeBlendSpace1D.xml  AnimationNodeBlendSpace2D.xml  AnimationNodeBlendTree.xml  AnimationNodeOneShot.xml  AnimationNodeOutput.xml  AnimationNodeStateMachine.xml  AnimationNodeStateMachinePlayback.xml  AnimationNodeStateMachineTransition.xml  AnimationNodeTimeScale.xml  AnimationNodeTimeSeek.xml  AnimationNodeTransition.xml  AnimationPlayer.xml  AnimationTree.xml  AnimationTreePlayer.xml  Area2D.xml  ArrayMesh.xml  AspectRatioContainer.xml  AudioEffectCapture.xml  AudioEffectDistortion.xml  AudioEffectFilter.xml  AudioEffectHighShelfFilter.xml  AudioEffectLowShelfFilter.xml  AudioEffectRecord.xml  AudioServer.xml  (+134 more)
gdnative-bindings/src/: generated.rs  icalls.rs  lib.rs  utils.rs
gdnative-core/: Cargo.toml  build.rs
gdnative-core/src/: access.rs  byte_array.rs  class.rs  color.rs  color_array.rs  dictionary.rs  error.rs  float32_array.rs  free_on_drop.rs  generated.rs  globalscope.rs  init.rs  int32_array.rs  internal.rs  lib.rs  log.rs  macros.rs  new_ref.rs  node_path.rs  object.rs  point2.rs  private.rs  profiler.rs  ref_counted.rs  ref_kind.rs  rid.rs  string.rs  string_array.rs  thread_access.rs  type_tag.rs  typed_array.rs  user_data.rs  variant.rs  variant_array.rs  vector2.rs  vector2_array.rs  vector3.rs  vector3_array.rs
gdnative-derive/: Cargo.toml
gdnative-derive/src/: derive_conv_variant.rs  derive_macro.rs  export.rs  export_enum.rs  extend_bounds.rs  init.rs  lib.rs  method_macro.rs  methods.rs  native_script.rs  profiled.rs  syntax.rs  utils.rs  varargs.rs  variant.rs
gdnative-macros/: Cargo.toml
gdnative-macros/src/: lib.rs
gdnative-sys/: Cargo.toml  build.rs
gdnative-sys/godot_headers/: LICENSE.md  README.md  gdnative_api_struct.gen.h
gdnative-sys/src/: api.rs  core_types.rs  lib.rs
gdnative/src/: array.rs  byte_array.rs  class.rs  color.rs  color_array.rs  dictionary.rs  float32_array.rs  gdscript.rs  generated.rs  globalscope.rs  godot_type.rs  init.rs  int32_array.rs  internal.rs  lib.rs  macros.rs  node_path.rs  object.rs  pool_byte_array.rs  pool_color_array.rs  pool_string_array.rs  pool_vector2_array.rs  pool_vector3_array.rs  prelude.rs  property.rs  rid.rs  string.rs  string_array.rs  variant.rs  variant_array.rs  vector2.rs  vector2_array.rs  vector3.rs  vector3_array.rs
gdnative/tests/: ui.rs
geom/: Cargo.toml
geom/src/: aabb.rs  basis.rs  lib.rs  plane.rs  transform.rs
impl/proc-macros/: Cargo.toml
impl/proc_macros/: Cargo.toml
input/: Cargo.toml  build.rs
input/src/: lib.rs
sys/: Cargo.toml  build.rs
sys/godot_headers/: gdnative_api_struct.gen.h
sys/src/: lib.rs
test/: Cargo.toml
test/project/: Scene.tscn  gdnative.gdnlib  main.gd  project.godot  tests.gd
test/src/: lib.rs  test_as_arg.rs  test_async.rs  test_constructor.rs  test_derive.rs  test_export_enum.rs  test_free_ub.rs  test_generic_class.rs  test_indexed_props.rs  test_map_owned.rs  test_register.rs  test_return_leak.rs  test_serde.rs  test_vararray_return.rs  test_variant_call_args.rs  test_variant_ops.rs
ui/: Cargo.toml  build.rs
ui/src/: lib.rs
video/: Cargo.toml  build.rs
video/src/: lib.rs
visual_script/: Cargo.toml  build.rs
visual_script/src/: lib.rs
(+488 files in other folders)
