[workspace]
members = [
    "gdnative",
    "gdnative-async",
    "gdnative-bindings",
    "gdnative-core",
    "gdnative-derive",
    "gdnative-sys",
    "test",
    "bindings_generator",
    "examples/hello_world",
    "examples/spinning_cube",
    "examples/scene_create",
    "examples/signals",
    "examples/dodge_the_creeps",
    "examples/resource",
    "examples/native_plugin",
    "examples/rpc",
    "examples/array_export",
    "impl/proc_macros"
]

[profile.dev.package.miniserde]
opt-level = 0
