[package]
name = "gdnative_bindings_generator"
authors = ["The godot-rust developers"]
description = "Generates bindings for the Godot engine's gdnative classes from a json api description file."
documentation = "https://docs.rs/crate/gdnative_bindings_generator"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
license = "MIT"
version = "0.10.0-rc.0"
workspace = ".."
edition = "2021"
rust-version = "1.56"

[features]
debug = []
custom-godot = ["which"]

[dependencies]
heck = "0.4.0"
memchr = "2.4.1"
miniserde = "0.1.15"
proc-macro2 = "1.0.30"
quote = "1.0.10"
regex = "1.5.4"
roxmltree = "0.14.1"
syn = { version = "1.0.80", features = ["full", "extra-traits", "visit"] }
unindent = "0.1.7"
which = { optional = true, version = "4.2.2" }
