[package]
name = "gdnative_bindings_generator"
authors = ["The godot-rust developers"]
description = "Generates bindings for the Godot engine's gdnative classes from a json api description file."
documentation = "https://docs.rs/crate/gdnative_bindings_generator"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
license = "MIT"
version = "0.10.2"
workspace = ".."
edition = "2021"
rust-version = "1.63"

[features]
debug = []
custom-godot = ["which"]

[dependencies]
heck = "0.4"
miniserde = "0.1.16"
proc-macro2 = "1"
quote = "1"
regex = { version = "1.5.5", default-features = false, features = ["std"] } # for security: https://blog.rust-lang.org/2022/03/08/cve-2022-24713.html
roxmltree = "0.15"
syn = { version = "1", features = ["full", "extra-traits", "visit"] }
unindent = "0.1.5"
which = { optional = true, version = "4" }
