[package]
name = "gdnative_bindings_generator"
authors = ["The godot-rust developers"]
description = "Generates bindings for the Godot engine's gdnative classes from a json api description file."
documentation = "https://docs.rs/crate/gdnative_bindings_generator"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
license = "MIT"
version = "0.9.3"
workspace = ".."
edition = "2018"

[features]
debug = []

[dependencies]
heck = "0.3.0"
roxmltree = "0.14.0"
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
miniserde = "=0.1.14"
unindent = "0.1.7"
