[package]
name = "gdnative_bindings_generator"
authors = ["The godot-rust developers"]
description = "Generates bindings for the Godot engine's gdnative classes from a json api description file."
documentation = "https://docs.rs/crate/gdnative_bindings_generator"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
license = "MIT"
version = "0.9.3"
workspace = ".."
edition = "2018"

[features]
debug = []

[dependencies]
heck = "0.3.3"
roxmltree = "0.14.1"
proc-macro2 = "1.0.30"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["full", "extra-traits", "visit"] }
miniserde = "0.1.15"
unindent = "0.1.7"
regex = "1.5.4"
memchr = "2.4.1"
