[package]
name = "gdnative_common"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative common generated class bindings."
documentation = "https://docs.rs/crate/gdnative"
repository = "https://github.com/GodotNativeTools/godot-rust"
version = "0.5.0"
license = "MIT"
workspace = ".."

[features]
gd_test = []

[dependencies]
gdnative_core = { path = "../core", version = "0.5.0" }
libc = "0.2"
bitflags = "1.0"

[build-dependencies]
gdnative_bindings_generator = { path = "../bindings_generator", version = "0.1.0" }