[package]
name = "gdnative-async"
authors = ["The godot-rust developers"]
description = "Runtime async support for godot-rust."
documentation = "https://docs.rs/crate/gdnative-async"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.11.3"
license = "MIT"
workspace = ".."
edition = "2021"
rust-version = "1.70"

[features]

[dependencies]
gdnative-derive = { path = "../gdnative-derive", version = "=0.11.3" }
gdnative-core = { path = "../gdnative-core", version = "=0.11.3" }
gdnative-bindings = { path = "../gdnative-bindings", version = "=0.11.3" }
atomic-waker = "1"
crossbeam-channel = "0.5"
futures-task = "0.3"
once_cell = "1"
parking_lot = "0.12"

[build-dependencies]
