[package]
name = "gdnative-bindings"
authors = ["The godot-rust developers"]
description = "The Godot game engine's automatcally generated bindings to Godot classes."
documentation = "https://docs.rs/crate/gdnative-bindings"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.11.3"
license = "MIT"
workspace = ".."
edition = "2021"
rust-version = "1.63"

[features]
formatted = []
one-class-one-file = []
custom-godot = ["gdnative_bindings_generator/custom-godot"]
ptrcall = ["gdnative_bindings_generator/ptrcall"]

[dependencies]
gdnative-core = { path = "../gdnative-core", version = "=0.11.3" }
libc = "0.2"

[build-dependencies]
gdnative_bindings_generator = { path = "../bindings-generator", version = "=0.11.3" }
