[package]
name = "gdnative-core"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative core bindings."
documentation = "https://docs.rs/crate/gdnative-core"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.10.0-rc.0"
license = "MIT"
workspace = ".."
edition = "2018"

[features]
default = []
gd-test = []
type-tag-fallback = []

[dependencies]
gdnative-sys = { path = "../gdnative-sys", version = "=0.10.0-rc.0" }
gdnative-impl-proc-macros = { path = "../impl/proc-macros", version = "=0.10.0-rc.0" }
ahash = "0.7.6"
approx = "0.5"
atomic-take = "1"
bitflags = "1"
glam = "0.20"
indexmap = "1"
libc = "0.2"
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
gdnative = { path = "../gdnative", version = "=0.10.0-rc.0" } # for doc-tests
