[package]
name = "gdnative-core"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative core bindings."
documentation = "https://docs.rs/crate/gdnative-core"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.11.3"
license = "MIT"
workspace = ".."
edition = "2021"
rust-version = "1.70"

[features]
default = []
gd-test = []
type-tag-fallback = []
custom-godot = []

[dependencies]
gdnative-sys = { path = "../gdnative-sys", version = "=0.11.3" }
gdnative-derive = { path = "../gdnative-derive", version = "=0.11.3" }
gdnative-impl-proc-macros = { path = "../impl/proc-macros", version = "=0.11.3" }
ahash = "0.8"
approx = "0.5"
atomic-take = "1"
bitflags = "1"
glam = "0.27"
indexmap = "2"
inventory = { version = "0.3", optional = true }
libc = "0.2"
once_cell = "1"
parking_lot = "0.12"
semver = "1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
gdnative = { path = "../gdnative" } # for doc-tests
