[package]
name = "gdnative-derive"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative derive and procedural macros."
documentation = "https://docs.rs/crate/gdnative-derive"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.11.3"
license = "MIT"
workspace = ".."
edition = "2021"
rust-version = "1.63"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "1"

[dev-dependencies]
# This is included for the doc tests.
gdnative = { path = "../gdnative" }
