[package]
name = "gdnative-macros"
version = "0.1.0"
authors = ["Max Sandholm <max@sandholm.org>"]
description = "Procedural macros for the GDNative library"
repository = "https://gitlab.com/vurpo/gdnative-rust"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syntex = "0.58.1"
syntex_syntax = "0.58.1"
quote = "0.3"
