[package]
name = "gdnative-sys"
authors = ["The godot-rust developers"]
description = "Generated bindings to the Godot game engine's gdnative core types (See the gdnative crate)."
documentation = "https://docs.rs/crate/gdnative-sys"
repository = "https://github.com/godot-rust/godot-rust"
version = "0.8.1"
build = "build.rs"
license = "MIT"
workspace = ".."
edition = "2018"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.51.1", default-features = false }
proc-macro2 = "1.0.6"
quote = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
