[package]
name = "gdnative-sys"
authors = ["The godot-rust developers"]
description = "Generated bindings to the Godot game engine's gdnative core types (See the gdnative crate)."
documentation = "https://docs.rs/crate/gdnative-sys"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.9.3"
build = "build.rs"
license = "MIT"
workspace = ".."
edition = "2018"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.57.0", default-features = false, features = ["runtime"] }
proc-macro2 = "1.0.6"
quote = "1.0.2"
miniserde = "=0.1.13"
