[package]
name = "gdnative"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative bindings."
documentation = "https://docs.rs/crate/gdnative"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.9.3"
license = "MIT"
workspace = ".."
readme = "../README.md"
edition = "2018"

[features]
# Public
default = []
async = ["gdnative-async"]
custom-godot = ["gdnative-bindings/custom-godot"]
formatted = ["gdnative-bindings/formatted", "gdnative-bindings/one-class-one-file"]
serde = ["gdnative-core/serde"]

# Internal
gd-test = ["gdnative-core/gd-test"]
type-tag-fallback = ["gdnative-core/type-tag-fallback"]

[dependencies]
gdnative-derive = { path = "../gdnative-derive", version = "=0.9.3" }
gdnative-core = { path = "../gdnative-core", version = "=0.9.3" }
gdnative-bindings = { path = "../gdnative-bindings", version = "=0.9.3" }
gdnative-async = { path = "../gdnative-async", version = "=0.9.3", optional = true }

[dev-dependencies]
trybuild = "1.0.50"
rustversion = "1.0.5"

# See https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["async", "serde"]
