[package]
name = "gdnative"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative bindings."
keywords = ["gamedev", "godot", "engine", "bindings"]
documentation = "https://docs.rs/crate/gdnative"
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.9.3"
license = "MIT"
workspace = ".."
readme = "../README.md"
edition = "2018"
# once edition is 2021, see https://doc.rust-lang.org/cargo/reference/manifest.html#the-rust-version-field:
# rust-version = "1.56"

[features]
# Public
default = []
async = ["gdnative-async"]
custom-godot = ["gdnative-bindings/custom-godot"]
formatted = ["gdnative-bindings/formatted", "gdnative-bindings/one-class-one-file"]
serde = ["gdnative-core/serde"]

# Internal
gd-test = ["gdnative-core/gd-test"]
type-tag-fallback = ["gdnative-core/type-tag-fallback"]

[dependencies]
gdnative-derive = { path = "../gdnative-derive", version = "=0.9.3" }
gdnative-core = { path = "../gdnative-core", version = "=0.9.3" }
gdnative-bindings = { path = "../gdnative-bindings", version = "=0.9.3" }
gdnative-async = { path = "../gdnative-async", version = "=0.9.3", optional = true }

[dev-dependencies]
trybuild = "1.0.18" # earrlier versions use broken termcolor 1.0.0
rustversion = "1"

# See https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["async", "serde"]
