[package]
name = "gdnative_geom"
authors = ["The godot-rust developers"]
description = "Math primitives for the Godot game engine's gdnative bindings (See the gdnative crate)."
documentation = "https://docs.rs/crate/gdnative-geom"
repository = "https://github.com/GodotNativeTools/godot-rust"
version = "0.5.0"
license = "MIT"
workspace = ".."
edition = "2018"

[dependencies]
euclid = "0.19.0"
