[package]
name = "gdnative_input"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative UI classes bindings."
documentation = "https://docs.rs/crate/gdnative"
repository = "https://github.com/GodotNativeTools/godot-rust"
version = "0.4.0"
license = "MIT"
workspace = ".."

[features]
gd_test = []

[dependencies]
gdnative_core = { path = "../core", version = "0.4.0" }
libc = "0.2"
bitflags = "1.0"

[build-dependencies]
gdnative_bindings_generator = { path = "../bindings_generator" }
