[package]
name = "gdnative-sys"
authors = ["The godot-rust developers"]
description = "Generated bindings to the Godot game engine's gdnative core types (See the gdnative crate)."
documentation = "https://docs.rs/crate/gdnative-sys"
repository = "https://github.com/GodotNativeTools/godot-rust"
version = "0.5.0"
build = "build.rs"
license = "MIT"
workspace = ".."

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.30.0"
