[package]
name = "gdnative-test"
version = "0.1.0"
workspace = ".."
edition = "2018"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
type-tag-fallback = ["gdnative/type-tag-fallback"]
custom-godot = ["gdnative/custom-godot"]

[dependencies]
gdnative = { path = "../gdnative", features = ["gd-test", "serde", "async"] }
gdnative-derive = { path = "../gdnative-derive" }
approx = "0.5"
ron = "0.7"
serde = "1"
serde_json = "1"
bincode = "1"
serde_yaml = "0.8.23"
rmp-serde = "0.15"
futures = "0.3"
once_cell = "1"
