[package]
name = "gdnative-test"
version = "0.1.0"
workspace = ".."
edition = "2021"
rust-version = "1.70"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
type-tag-fallback = ["gdnative/type-tag-fallback"]
custom-godot = ["gdnative/custom-godot"]
ptrcall = ["gdnative/ptrcall"]
inventory = ["gdnative/inventory"]
no-manual-register = []

[dependencies]
gdnative = { path = "../gdnative", features = ["gd-test", "serde", "async"] }
gdnative-core = { path = "../gdnative-core" }
approx = "0.5"
ron = "0.8"
serde = "1"
serde_json = "1"
bincode = "1"
rmp-serde = "1"
futures = "0.3"
