[package]
name = "gdnative_ui"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative UI bindings."
documentation = "https://docs.rs/crate/gdnative"
repository = "https://github.com/GodotNativeTools/godot-rust"
version = "0.4.0"
license = "MIT"
workspace = ".."

[features]
gd_test = []

[dependencies]
gdnative_common = { path = "../common", version = "0.4.0" }
gdnative_video = { path = "../video", version = "0.4.0" }

[build-dependencies]
gdnative_bindings_generator = { path = "../bindings_generator" }
