[package]
name = "gdnative-visual_script"
authors = ["The godot-rust developers"]
description = "The Godot game engine's gdnative visual script classes bindings."
documentation = "https://docs.rs/crate/gdnative"
repository = "https://github.com/GodotNativeTools/godot-rust"
version = "0.5.0"
license = "MIT"
workspace = ".."

[features]
gd_test = []

[dependencies]
gdnative-common = { path = "../common", version = "0.5.0" }

[build-dependencies]
gdnative_bindings_generator = { path = "../bindings_generator", version = "0.2.0" }