[package]
name = "fps"
version = "0.1.0"
authors = ["Justin Wood <me@ankhers.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { path = "../../gdnative" }