[package]
name = "specs_integration"
version = "0.1.0"
authors = ["The godot-rust developers"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { path = "../../gdnative" }
euclid = "0.20.1"
lazy_static="1.2.0"

specs = {version="0.15.1", features = [] }
# If you are on the nightly toolchain, consider turning on this feature for nice
#   Error messages...
#specs = {version="0.15.1", features = ["nightly"] }

nalgebra = "0.18.1"
