[package]
name = "gdnative-impl-proc-macros"
authors = ["The godot-rust developers"]
description = "Internal dependency of the gdnative bindings."
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.11.3"
license = "MIT"
workspace = "../.."
edition = "2021"
rust-version = "1.63"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
