[package]
name = "gdnative-impl-proc-macros"
authors = ["The godot-rust developers"]
description = "Internal dependency of the gdnative bindings."
repository = "https://github.com/godot-rust/godot-rust"
homepage = "https://godot-rust.github.io/"
version = "0.9.2"
license = "MIT"
workspace = "../.."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "^1.0"
